# user-service

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: deploy.yml  stage-docker.yml
deploy/: user-service.service
docs/: premium-payment-integration-changelog.md
migrations/: 0001_init.down.sql  0001_init.up.sql  0002_indexes.down.sql  0002_indexes.up.sql  0003_constraints.down.sql  0003_constraints.up.sql  0004_call_history.down.sql  0004_call_history.up.sql  0005_presence.down.sql  0005_presence.up.sql  0006_reminders.down.sql  0006_reminders.up.sql
src/: main.cpp
tests/: jwt_smoke_test.py  spec_test.py
tools/: build_release.cmd
